--- a/README
+++ b/README
@@ -136,6 +136,7 @@ Syntax
 18. ASPOpenTag not implemented (still runs because it's ignored) (tests/syntax/phptagasp.php)
 19. "In PHP 5.2 and earlier, the parser does not allow the <?php opening tag to be the only thing in a file. This is allowed as of PHP 5.3." (tests/syntax/phptagstandard.php, tests/syntax/instructionseparation.php)
 20. sglri does not allow combination of different sytles of open-close tags (tests/syntax/phptagcombination.php)
+30. sglri seems to now allow lambdas! (tests/basicsdatatypes/callback/callbackclosure.php)
 
 
 Types
@@ -152,6 +153,8 @@ Types
 27. No support for classes/objects (tests/basicdatatypes/compound/object/*)
 28. Resources are not implemented (no test file)
 29. NULL type not implemented (tests/basicdatatypes/null.php)
+31. Callback (tests/basicdatatypes/callback/callback.php)
+32. tests/basicdatatypes/typejuggling.php analysis is wrong
 
 Control Structures
 ------------------
