outputting all sets of types for each identifier

--- a/doc/report.tex
+++ b/doc/report.tex
@@ -73,6 +73,7 @@
 
 \begin{itemize}
   \item Output for all variables the set of types possible.
+  \item Improve output with graph.
 \end{itemize}
 
 \bibliographystyle{plain}
