--- a/doc/report.tex
+++ b/doc/report.tex
@@ -72,7 +72,7 @@
 \section{TODO}
 
 \begin{itemize}
-  \item Output for all variables the set of types possible.
+  \item Output for all variables the set of types possible. (done)
   \item Improve output with graph.
 \end{itemize}
 
