--- a/doc/report.tex
+++ b/doc/report.tex
@@ -73,7 +73,7 @@
 
 \begin{itemize}
   \item Output for all variables the set of types possible. (done)
-  \item Improve output with graph.
+  \item Create a dot file for the code to be used with the control flow.
 \end{itemize}
 
 \bibliographystyle{plain}
