--- a/README
+++ b/README
@@ -110,43 +110,46 @@ Done
 6. Strings with escapes characters (tests/basicdatatypes/scalar/string/doublequoted.php)
 7. Simple interprocedural analysis (tests/functions/id.php, tests/functions/id2.php)
 8. While-construct (tests/controlstruct/while.php)
+9. Booleans (tests/basicdatatypes/scalar/boolean/boolean.php)
+10. User-defined functions without parameters (tests/functions/simple.php)
+11. Return statement (tests/functions/simple.php)
+12. Recursive functions (tests/functions/fac.php)
+13. Print function (tests/print.php)
+14. Echo function (tests/echo.php)
+15. PreInc and PostInc (tests/preposincrement.php)
+16. Assignment operators (Arithmetic and String) (tests/assignop.php)
+17. Comparison Operators (tests/basicdatatypes/scalar/boolean/boolop.php)
+18. Logical Operators (tests/basicdatatypes/scalar/boolean/logicop.php)
+19. Supports HTML Embedding (tests/syntax/htmlembedding.php)
+20. InlineHTML not implemented (tests/syntax/advancedescaping.php)
 
 Supported PHP5 features
 -----------------------
-1. Supports HTML Embedding (tests/syntax/htmlembedding.php)
-4. Booleans (tests/basicdatatypes/scalar/boolean/boolean.php)
 6. Creating/modifying with square bracket syntax
-8. User-defined functions without parameters (tests/functions/simple.php)
-9. Recursive functions (I believe not all recursive functions are supported) (tests/functions/fac.php)
-10. Return statement (tests/functions/fac.php)
 
 Non-Supported PHP5 features
 ---------------------------
 
 Parser 
 ~~~~~~
-
+1. sglri does not allow combination of different sytles of open-close tags (tests/syntax/phptagcombination.php)
 
 General
 ~~~~~~~
 
-0. Print, Echo functions (semantics, flow)
-13. PreInc and PostInc not implemented (tests/postinc.php, tests/preposincrement.php)
-24. PlusAssign (tests/plusassign.php)
+
 33. XorAssign not implemented (tests/efficientswap.php)
-37. Greater, GreaterEqual, Less (tests/controlstruct/elseif.php)
 55. Exceptions (tests/exceptions/*)
-56. Not (tests/exceptions/exception.php)
 57. Classes and Objects (tests/oo/*)
 
 Syntax
 ~~~~~~
 3. TemplateDocument (tests/syntax/phptagecho.php, tests/syntax/phptagscript.php)
-16. InlineHTML not implemented (tests/syntax/advancedescaping.php)
+
 17. Error in ATerm: DQContent takes 1 arguments, but 3 were given. (tests/syntax/phptagsimple.php)
 18. ASPOpenTag not implemented (still runs because it's ignored) (tests/syntax/phptagasp.php)
 19. "In PHP 5.2 and earlier, the parser does not allow the <?php opening tag to be the only thing in a file. This is allowed as of PHP 5.3." (tests/syntax/phptagstandard.php, tests/syntax/instructionseparation.php)
-20. sglri does not allow combination of different sytles of open-close tags (tests/syntax/phptagcombination.php)
+
 
 
 Types
@@ -209,8 +212,7 @@ Functions
 
 TODO
 ----
-3. Implement items not supported
--- Arithmetic 
+3. Implement items not supported 
 -- Arrays
 -- References
 -- The arity in the CCO library does not allow for productions to have more than one rule.
